service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: leo
  name: leo
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: leo
  type: NodePort
status:
  loadBalancer: {}
